--- a/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
+++ b/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
@@ -73,6 +73,7 @@
     <EmbeddedResource Include="ReplicatorStatus.resx">
       <DependentUpon>ReplicatorStatus.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
