--- a/tools/Widgets/branches/lbross/src/Widgets.csproj
+++ b/tools/Widgets/branches/lbross/src/Widgets.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
-    <Compile Include="LauncherUtil.cs" />
+    <Compile Include="WidgetsUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBoxStreamWriter.cs" />
     <Compile Include="WidgetInterface.cs" />
