Continue adding functionality to Replicator
git-svn-id: http://Marc-PC/svn/Full@1953 85f15e0e-5137-b144-a863-98bd542365a3

--- a/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
+++ b/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Replicator.resx">
       <DependentUpon>Replicator.cs</DependentUpon>
@@ -135,6 +136,9 @@
       <Project>{A8B52E22-C5B0-401F-B32E-83B519868B73}</Project>
       <Name>Widgets</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logos1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
