Changes to support layout change
git-svn-id: http://Marc-PC/svn/Full@1955 85f15e0e-5137-b144-a863-98bd542365a3

--- a/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
+++ b/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
@@ -138,6 +138,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\logos_rect.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\logos1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
