Change name of executable
git-svn-id: http://Marc-PC/svn/Full@2112 85f15e0e-5137-b144-a863-98bd542365a3

--- a/tools/Widgets/branches/lbross/src/Launcher/Launcher.csproj
+++ b/tools/Widgets/branches/lbross/src/Launcher/Launcher.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Launcher</RootNamespace>
-    <AssemblyName>Launcher</AssemblyName>
+    <AssemblyName>Landis-II Launcher</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
