--- a/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
+++ b/tools/Widgets/branches/lbross/src/Replicator/Replicator.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Replicator</RootNamespace>
-    <AssemblyName>Replicator</AssemblyName>
+    <AssemblyName>Landis-II Replicator</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
