--- a/tools/Widgets/branches/lbross/src/Replicator/app.config
+++ b/tools/Widgets/branches/lbross/src/Replicator/app.config
@@ -18,7 +18,7 @@
   <appSettings>
     <!--<add key="version" value="6.0" />
     <add key="release" value="{RELEASE}" /> -->
-    <add key="gdal_folder" value="C:\Program Files\LANDIS-II\GDAL\1.9"/>
+    <add key="gdal_folder" value="C:\Program Files\LANDIS-II\GDAL"/>
     <!-- Note: this file name is also defined in the log4net section below-->
     <add key="landis_log" value="Landis-log.txt"/>
   </appSettings>
