Add core v6.2 to probingPath to accommodate forthcoming core v6.2

--- a/Widgets/trunk/src/Launcher/app.config
+++ b/Widgets/trunk/src/Launcher/app.config
@@ -6,7 +6,7 @@
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="6.1;6.0;build;extensions" />
+      <probing privatePath="6.2;6.1;6.0;build;extensions" />
       <!--<probing privatePath="build" /> -->
       <dependentAssembly>
         <assemblyIdentity name="gdal_csharp" publicKeyToken="DB5A52B08DC5B321" culture="neutral"/>
